Service Regression/.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/echosign_dev1__SIGN_Settings_Private__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>echosign_dev1__API_Key__c</fullName>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Access_Token_Demo__c</fullName>
        <label>Access Token Demo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Access_Token_Expiration_Demo__c</fullName>
        <label>Access Token Expiration Demo</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Access_Token_Expiration_Preview__c</fullName>
        <label>Access Token Expiration Preview</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Access_Token_Expiration_Stage__c</fullName>
        <label>Access Token Expiration Stage</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Access_Token_Expiration__c</fullName>
        <label>Access Token Expiration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Access_Token_Preview__c</fullName>
        <label>Access Token Preview</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Access_Token__c</fullName>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Access_Token_stage__c</fullName>
        <label>Access Token Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Client_ID_Demo__c</fullName>
        <label>Client ID Demo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Client_ID_Preview__c</fullName>
        <label>Client ID Preview</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Client_ID_Stage__c</fullName>
        <label>Client ID Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Client_ID__c</fullName>
        <label>Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Client_Secret_Demo__c</fullName>
        <label>Client Secret Demo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Client_Secret_Preview__c</fullName>
        <label>Client Secret Preview</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Client_Secret_Stage__c</fullName>
        <label>Client Secret Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Network_Range_One_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Network Range One Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Network_Range_Two_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Network Range Two Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Security_Shared_Token__c</fullName>
        <label>Security Shared Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EchoSign Settings Private</label>
</CustomObject>